--- a/AdminPage/Styles/userManagement.css
+++ b/AdminPage/Styles/userManagement.css
@@ -2,7 +2,7 @@
 
 
 .main-header{
-    background-color: #ffffff;
+    background-color: #003365;
 }
 
 .main-header{
@@ -18,13 +18,13 @@
 }
 
 .main-header input{
-    background-color: transparent;
-    border: solid 2px #232323; 
+    background-color: #ffffff;
+    border: solid 2px #ffffff; 
     /* color: #b9b9b9; */
     padding: 0.4rem 0.9rem;
     font-size: 1rem;
     width: 100%;
-    border-radius: 1rem;
+    border-radius: 1rem 0rem 0rem 1rem;
 }
 
 .searchbar{
@@ -40,24 +40,23 @@
 }
 
 .searchButton{
-    background-color: transparent;
-    border: solid 2px #232323; 
-    color: #b9b9b9;
-    padding: 0.4rem 0.5rem;
+    background-color: #ffffff;
+    border: solid 2px #ffffff; 
+    padding: 0.39rem 0.5rem;
     width: 1.2rem;
-    border-radius: 50%;
+    border-radius: 0rem 1rem 1rem 0rem;
     -webkit-user-drag: none;
     user-select: none;
 }
 
 .main-header button{
-    background-color: #fff;
-    /* color: #b9b9b9; */
+    background-color: transparent;
+    color: #ffffff;
     font-weight: 600;
     padding: 0.6rem 1rem;
     border: none;
     border-radius: 1rem;
-    outline: solid 2px #232323;
+    outline: solid 2px #ffffff;
     transition: background-color 0.15s;
 }
 
@@ -193,7 +192,6 @@ form div{
 
 .userItem{
     user-select: none;
-    cursor: pointer;
 }
 
 /* } Form Header */
@@ -432,6 +430,16 @@ form div{
 
 #yesbtn:active, #nobtn:active{
     background-color: #ffffff50;
+}
+
+.viewDetailsEL{
+    cursor: pointer;
+    padding: 0.6rem 1rem;
+    border: none;
+    background-color: #005db9;
+    color: #ffffff;
+    font-weight: 500;
+    border-radius: 1rem;
 }
 
 /* add  */
