--- a/AssocClient/Styles/mainStyle/general-style.css
+++ b/AssocClient/Styles/mainStyle/general-style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body{
-    background-color: #232323;
+    background-color: #ececec;
     margin: 0;
     font-family: "ROBOTO";
     color: #eee;
@@ -26,6 +26,11 @@ a:visited, a:active, a:hover, a{
     padding: 0.4rem 0rem;
     font-weight: bold;
     font-style: italic;
+}
+
+.top-main-section{
+    font-weight: 600;
+    color: #232323;
 }
 
 select{
