Final Retouch Updates
-Both Login options can be recognized

--- a/AdminPage/Styles/mainStyle/general-style.css
+++ b/AdminPage/Styles/mainStyle/general-style.css
@@ -107,7 +107,8 @@ select:focus, select:active{
 }
 
 ._PopUpForm{
-    background-color: #181818;
+    background-color: #003365;
+    color: #eee;
     padding: 1rem 1rem;
     border-radius: 1rem;
 }
